# MathLib

./: AdvancedOperations.cpp  AdvancedOperations.h  BasicOperations.cpp  BasicOperations.h  CMakeLists.txt  MyMathLib.h  README.md  main.cpp  sonar-project.properties
.github/workflows/: build.yml
tests/: AdvancedOperationsTest.cpp  AdvancedOperations_test.cpp  BasicOperations_test.cpp  test.cpp
